// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test within Form shallow a 2 TextInput 1`] = `
<form>
  <TextInput
    doc={
      Object {
        "test": "Type Sample",
        "test2": "Type Sample",
      }
    }
    fieldName="test"
    key=".0"
    label="test"
    setDoc={[Function]}
    value="Type Sample"
  />
  <TextInput
    doc={
      Object {
        "test": "Type Sample",
        "test2": "Type Sample",
      }
    }
    fieldName="test2"
    key=".1"
    label="test2"
    setDoc={[Function]}
    value="Type Sample"
  />
  <WithStyles(Button)
    onClick={[Function]}
  >
    Submit
  </WithStyles(Button)>
</form>
`;

exports[`Test within Form shallow a TextInput 1`] = `
<form>
  <TextInput
    doc={
      Object {
        "test": "Type Sample",
      }
    }
    fieldName="test"
    key=".0"
    label="test"
    setDoc={[Function]}
    value="Type Sample"
  />
  <WithStyles(Button)
    onClick={[Function]}
  >
    Submit
  </WithStyles(Button)>
</form>
`;
